configuration file which was previously used only by B<nnrpd> is renamed
to F<motd.nnrpd> (B<innupgrade> takes care of the rename).  B<innd> uses
the new F<motd.innd> file in I<pathetc> for its message of the day.

=item *

Fixed an issue at configure time that made INN wrongly assume that OpenBSD
(4.6) didn't support Unix-domain sockets.  Thanks to Wim Lewis for the patch.

=item *

The Injection-Date: header, when present, is now used by B<innd> and
B<makehistory> to determine the posting date of an article.  Otherwise,
the Date: header is used.

=item *

B<nnrpd> no longer adds or updates the Path: header field when an article is
forwarded to a moderator.  It could otherwise lead to rejects at injection
time when the article was approved by the moderator.

=item *

B<pullnews> no longer stops processing newsgroups when an error occur during
its run (for instance when a newsgroup mentioned in the configuration file
is removed from an upstream server).  Besides, it can now use authentication
when posting to the downstream server.

=item *

It is now possible to run a script at the end of the execution of
B<innshellvars> scripts.  If a file named F<innshellvars.local>,
F<innshellvars.pl.local> or F<innshellvars.tcl.local> is present and
executable in I<pathetc>, then it will be executed by the corresponding
B<innshellvars> script (respectively shell, INN::Config Perl module,
and Tcl).  A typical use is to add or override variables.

=back

=head1 Changes in 2.5.2

The way checkpoints are handled by B<innreport> for B<innd> and B<innfeed>
has totally changed to provide more accurate daily statistics.  The first
Usenet report after an upgrade to S<INN 2.5.2> will probably contain
incorrect statistics for incoming and outgoing articles because the
beginning of the log files that will be used was generated by a previous
version of INN.

A new version of F<innreport.conf> is shipped with S<INN 2.5.2> but, in